--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </section>
 <footer class="page-footer">
   <div class="container">
-    <small>Made with <span>❤</span> by <a href="http://georgemartsoukos.com/" target="_blank">George Martsoukos</a>
+    <small>Hope you <span>❤</span> by <a href="htttps://courogen-class.webnode.com" target="_blank">Ravinder Olivier Singh Dadiala</a>
     </small>
   </div>
 </footer>
