--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="api">
-  <div class="container">🌞 This demo needs an OpenWeather API key to work. <a target="_blank" href="https://home.openweathermap.org/users/sign_up">Get yours here for free!</a>
+  <div class="container">🌞 This app is powered by openweathermap. <a target="_blank" href="https://home.openweathermap.org/">Get yours here for free!</a>
   </div>
 </div>
 <section class="top-banner">
@@ -19,7 +19,7 @@
 </section>
 <footer class="page-footer">
   <div class="container">
-    <small>Hope you <span>❤</span> by <a href="htttps://courogen-class.webnode.com" target="_blank">Ravinder Olivier Singh Dadiala</a>
+    <small>Hope you <span>❤</span> by <a href="https://github.com/Ravin-Oli/Weather-App/edit/main/index.html" target="_blank">Ravinder Olivier Singh Dadiala</a>
     </small>
   </div>
 </footer>
