--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div class="api">
+<div class="91f4aa6b915d697daea80bc7337ea76d">
   <div class="container">🌞 This app is powered by openweathermap. <a target="_blank" href="https://home.openweathermap.org/">Get yours here for free!</a>
   </div>
 </div>
