--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <div class="91f4aa6b915d697daea80bc7337ea76d">
-  <div class="container">🌞 This app is powered by openweathermap. <a target="_blank" href="https://home.openweathermap.org/">Get yours here for free!</a>
+  <div class="container">🌞 This app is powered by openweathermap. <a target="_blank" href="https://home.openweathermap.org/">Get your api key here for free!</a>
   </div>
 </div>
 <section class="top-banner">
