--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </section>
 <footer class="page-footer">
   <div class="container">
-    <small>Hope you <span>❤</span> by <a href="https://github.com/Ravin-Oli/Weather-App/edit/main/index.html" target="_blank">Ravinder Olivier Singh Dadiala</a>
+    <small>Hope you <span>❤</span> by <a href="https://github.com/Ravin-Oli/" target="_blank">Ravinder Olivier Singh Dadiala</a>
     </small>
   </div>
 </footer>
