--- a/index.html
+++ b/index.html
@@ -1,25 +1,1 @@
-<div class="91f4aa6b915d697daea80bc7337ea76d">
-  <div class="container">🌞 This app is powered by openweathermap. <a target="_blank" href="https://home.openweathermap.org/">Get your api key here for free!</a>
-  </div>
-</div>
-<section class="top-banner">
-  <div class="container">
-    <h1 class="heading">Simple Weather App</h1>
-    <form>
-      <input type="text" placeholder="Search for a city" autofocus>
-      <button type="submit">SUBMIT</button>
-      <span class="msg"></span>
-    </form>
-  </div>
-</section>
-<section class="ajax-section">
-  <div class="container">
-    <ul class="cities"></ul>
-  </div>
-</section>
-<footer class="page-footer">
-  <div class="container">
-    <small>Hope you <span>❤</span> by <a href="https://github.com/Ravin-Oli/" target="_blank">Ravinder Olivier Singh Dadiala</a>
-    </small>
-  </div>
-</footer>
+41 f at bull mountain tigard
